--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,6 +1,6 @@
 name: Node.js Package
 
-# The workflow will trigger when a new tag is pushed
+# The workflow will trigger when a new tag is created
 on:
   push:
     tags:
@@ -26,16 +26,15 @@ jobs:
           npm ci
           npm install
 
-
       # Check if the tag ends with -release. If it does, set an output variable 'release' to true.
       - name: Check Tag
         id: checktag
         run: |
           TAG_NAME=${GITHUB_REF#refs/tags/}
           if [[ $TAG_NAME == *"-release" ]]; then
-            echo ::set-output name=release::true
+            echo "release=true" >> $GITHUB_ENV
           else
-            echo ::set-output name=release::false
+            echo "release=false" >> $GITHUB_ENV
           fi
 
       # If the 'release' variable is true, the workflow will publish your package to the npm registry.
@@ -43,4 +42,4 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        if: steps.checktag.outputs.release == 'true'
+        if: env.release == 'true'
